Add derive macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@ members = ["crates/*"]
 resolver = "2"
 
 [workspace.dependencies]
+quote = "1.0.23"
+syn = "1.0.109"
+family-derive = { path = "./crates/family-derive" }
