--- a/crates/family-derive/Cargo.toml
+++ b/crates/family-derive/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "family"
-version = "0.1.2"
+name = "family-derive"
+version = "0.1.0"
 edition = "2021"
-description = "I can't believe it's not HKT!"
+description = "Derive macros for family"
 readme = "../../README.md"
 repository = "https://github.com/open-mv-sandbox/family-rs"
 license = "MIT OR Apache-2.0"
 
+[lib]
+proc-macro = true
+
 [dependencies]
-family-derive.workspace = true
+quote.workspace = true
+syn.workspace = true
